--- a/src/app/build.gradle
+++ b/src/app/build.gradle
@@ -61,14 +61,13 @@ android {
         kotlinCompilerExtensionVersion compose_version
         kotlinCompilerVersion '1.5.31'
     }
-
     packagingOptions {
-        excludes += "/META-INF/AL2.0"
-        excludes += "/META-INF/LGPL2.1"
         resources {
-            excludes += '/META-INF/{AL2.0,LGPL2.1}'
+            excludes += ['/META-INF/{AL2.0,LGPL2.1}', '/META-INF/AL2.0', '/META-INF/LGPL2.1']
         }
     }
+
+    namespace 'com.cbmobile.inventory.compose'
 }
 
 dependencies {
