--- a/src/app/build.gradle
+++ b/src/app/build.gradle
@@ -1,3 +1,5 @@
+import org.jetbrains.kotlin.gradle.tasks.KotlinCompile
+
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
@@ -5,12 +7,12 @@ plugins {
 }
 
 android {
-    compileSdk 31
+    compileSdk 33
 
     defaultConfig {
         applicationId "com.cbmobile.inventory.compose"
         minSdk 23
-        targetSdk 31
+        targetSdk 33
         versionCode 1
         versionName "1.0"
 
@@ -51,15 +53,14 @@ android {
     }
     kotlinOptions {
         jvmTarget = '1.8'
-        useIR = true
     }
     buildFeatures {
         compose true
     }
 
     composeOptions {
-        kotlinCompilerExtensionVersion compose_version
-        kotlinCompilerVersion '1.5.31'
+        kotlinCompilerExtensionVersion "1.4.3"
+        kotlinCompilerVersion "1.8.10"
     }
     packagingOptions {
         resources {
@@ -72,65 +73,65 @@ android {
 
 dependencies {
 
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$kotlin_coroutines_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:1.8.10"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4"
 
-    implementation "androidx.compose.runtime:runtime-livedata:$compose_version"
-    implementation "androidx.compose.ui:ui:$compose_version"
-    implementation "androidx.compose.foundation:foundation-layout:$compose_version"
-    implementation "androidx.compose.material:material:$compose_version"
-    implementation "androidx.compose.material:material-icons-extended:$compose_version"
-    implementation "androidx.compose.foundation:foundation:$compose_version"
-    implementation "androidx.compose.animation:animation:$compose_version"
-    implementation "androidx.compose.ui:ui-tooling:$compose_version"
-    implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
-    implementation "androidx.compose.runtime:runtime-livedata:$compose_version"
-    implementation "androidx.constraintlayout:constraintlayout-compose:$constraints_compose_version"
+    implementation "androidx.compose.runtime:runtime-livedata:1.3.3"
+    implementation "androidx.compose.ui:ui:1.3.3"
+    implementation "androidx.compose.foundation:foundation-layout:1.3.1"
+    implementation "androidx.compose.material:material:1.3.1"
+    implementation "androidx.compose.material:material-icons-extended:1.3.1"
+    implementation "androidx.compose.foundation:foundation:1.3.1"
+    implementation "androidx.compose.animation:animation:1.3.3"
+    implementation "androidx.compose.ui:ui-tooling:1.3.3"
+    implementation "androidx.compose.ui:ui-tooling-preview:1.3.3"
+    implementation "androidx.compose.runtime:runtime-livedata:1.3.3"
+    implementation "androidx.constraintlayout:constraintlayout-compose:1.0.1"
 
     //fix for android versions older than 9 that won't load images
-    implementation "com.google.accompanist:accompanist-drawablepainter:$google_accompanist_version"
-    implementation "com.google.accompanist:accompanist-swiperefresh:$google_accompanist_version"
-    implementation "com.google.accompanist:accompanist-insets:$google_accompanist_version"
-    implementation "com.google.accompanist:accompanist-systemuicontroller:$google_accompanist_version"
-    implementation "com.google.code.gson:gson:$gson_version"
+    implementation "com.google.accompanist:accompanist-drawablepainter:0.20.0"
+    implementation "com.google.accompanist:accompanist-swiperefresh:0.20.0"
+    implementation "com.google.accompanist:accompanist-insets:0.20.0"
+    implementation "com.google.accompanist:accompanist-systemuicontroller:0.20.0"
+    implementation "com.google.code.gson:gson:2.8.9"
 
-    implementation "androidx.activity:activity-compose:$androidx_activity_version"
-    implementation "androidx.activity:activity-ktx:$androidx_activity_version"
-    implementation "androidx.appcompat:appcompat:$androidx_activity_version"
-    implementation "androidx.core:core-ktx:$androidx_core_ktx_version"
+    implementation "androidx.activity:activity-compose:1.6.1"
+    implementation "androidx.activity:activity-ktx:1.6.1"
+    implementation "androidx.appcompat:appcompat:1.6.1"
+    implementation "androidx.core:core-ktx:1.9.0"
 
-    implementation "androidx.lifecycle:lifecycle-runtime-ktx:$androidx_livedata_version"
-    implementation "androidx.lifecycle:lifecycle-viewmodel-savedstate:$androidx_livedata_version"
-    implementation "androidx.lifecycle:lifecycle-livedata-ktx:$androidx_livedata_version"
-    implementation "androidx.lifecycle:lifecycle-viewmodel-compose:$androidx_lifecycle_viewmodel_compose_version"
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.6.0"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-savedstate:2.6.0"
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.6.0"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-compose:2.6.0"
 
 
-    implementation "androidx.navigation:navigation-compose:$androidx_navigation_compose_version"
-    implementation "com.google.android.material:material:$android_materialdesign_version"
+    implementation "androidx.navigation:navigation-compose:2.5.3"
+    implementation "com.google.android.material:material:1.8.0"
 
     //couchbase lite for kotlin
-    implementation"com.couchbase.lite:couchbase-lite-android-ktx:$couchbase_lite_version"
+    implementation"com.couchbase.lite:couchbase-lite-android-ktx:3.0.5"
     //implementation"com.couchbase.lite:couchbase-lite-android:$couchbase_lite_version"
     //implementation files('libs/couchbase-lite-android-ee-ktx-3.0.0-180.aar')
     //implementation files('libs/couchbase-lite-android-ee-3.0.0-180.aar')
 
-    androidTestImplementation "androidx.test:rules:$androidx_test_runner_version"
-    androidTestImplementation "androidx.test:runner:$androidx_test_runner_version"
-    androidTestImplementation "androidx.compose.ui:ui-test:$androidx_test_runner_version"
-    androidTestImplementation "androidx.compose.ui:ui-test-junit4:$androidx_test_runner_version"
+    androidTestImplementation "androidx.test:rules:1.5.0"
+    androidTestImplementation "androidx.test:runner:1.5.2"
+    androidTestImplementation "androidx.compose.ui:ui-test:1.3.3"
+    androidTestImplementation "androidx.compose.ui:ui-test-junit4:1.3.3"
 
-    androidTestImplementation "androidx.test.ext:junit:$androidx_junit_version"
-    androidTestImplementation "androidx.test.espresso:espresso-core:$androidx_espresso_version"
+    androidTestImplementation "androidx.test.ext:junit:1.1.5"
+    androidTestImplementation "androidx.test.espresso:espresso-core:3.5.1"
 
     // Robolectric dependencies
-    testImplementation "androidx.compose.ui:ui-test-junit4:$androidx_junit4_version"
+    testImplementation "androidx.compose.ui:ui-test-junit4:1.3.3"
     // TODO: Bump to 4.6.* after https://github.com/robolectric/robolectric/issues/6593 is fixed
-    testImplementation "org.robolectric:robolectric:$robolectric_version"
+    testImplementation "org.robolectric:robolectric:4.6.1"
 
-    testImplementation 'junit:junit:4.+'
+    testImplementation 'junit:junit:'
 
-    debugImplementation "androidx.compose.ui:ui-test-manifest:$androidx_compose_ui_test"
-    debugImplementation "androidx.compose.ui:ui-tooling:$androidx_compose_ui_test"
+    debugImplementation "androidx.compose.ui:ui-test-manifest:1.3.3"
+    debugImplementation "androidx.compose.ui:ui-tooling:1.3.3"
 }
 
 kapt {
@@ -138,7 +139,7 @@ kapt {
 }
 
 
-tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).configureEach {
+tasks.withType(KotlinCompile).configureEach {
     kotlinOptions {
         // Treat all Kotlin warnings as errors (disabled by default)
         allWarningsAsErrors = project.hasProperty("warningsAsErrors") ? project.warningsAsErrors : false
@@ -152,6 +153,6 @@ tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).configureEach {
     }
 }
 
-tasks.withType(Test) {
+tasks.withType(Test).configureEach {
     systemProperty "robolectric.logging", "stdout"
 }
