--- a/src/build.gradle
+++ b/src/build.gradle
@@ -1,30 +1,6 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
-    ext {
-        ext.kotlin_version = '1.5.31'
-        ext.kotlin_coroutines_version = '1.5.2-native-mt'
-        ext.google_accompanist_version = '0.20.0'
-        ext.compose_version = '1.0.4'
-        ext.coroutines_version = '1.5.0'
-        ext.accompanist_version = '0.18.0'
-        ext.constraints_compose_version = '1.0.0-beta02'
-        ext.gson_version = '2.8.8'
-        ext.androidx_activity_version = '1.3.1'
-        ext.androidx_core_ktx_version = '1.6.0'
-        ext.androidx_livedata_version = '2.3.1'
-        ext.androidx_lifecycle_viewmodel_compose_version = '1.0.0-alpha07'
-        ext.androidx_navigation_compose_version = '2.4.0-alpha08'
-        ext.android_materialdesign_version = '1.4.0'
-        ext.androidx_test_runner_version = '1.4.0'
-        ext.androidx_junit_version = '1.1.3'
-        ext.androidx_espresso_version = '3.4.0'
-        ext.androidx_junit4_version = '1.0.4'
-        ext.tools_build_version = '7.0.0'
-        ext.androidx_compose_ui_test = '1.0.4'
 
-        ext.robolectric_version = '4.6.1'
-        ext.couchbase_lite_version = "3.0.0-beta02"
-    }
 
     repositories {
         maven {
@@ -32,12 +8,13 @@ buildscript {
         }
         google()
         mavenCentral()
+        maven { url "https://jitpack.io" }
     }
 
     dependencies {
 
-        classpath "com.android.tools.build:gradle:7.3.0"
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "com.android.tools.build:gradle:7.3.1"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.8.10"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -54,6 +31,7 @@ subprojects {
         }
         google()
         mavenCentral()
+        maven { url "https://jitpack.io" }
     }
 
     apply plugin: 'com.diffplug.spotless'
